# django-kanban-board

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  manage.py  pyproject.toml  setup.py
kanban_board/: admin.py  models.py  urls.py  views.py
kanban_board/migrations/: 0001_initial.py  0002_auto_20200918_2253.py  0003_auto_20201003_1310.py
kanban_board/static/kanban_board/css/: kanban-board-default-style.css
kanban_board/static/kanban_board/js/: kanbanboard.js
kanban_board/templates/: _board.html  _root.html
kanban_board/templates/kanban_board/: _board.html  board.html  panel.html  root.html
tests/: test_backend.py  test_models.py
tests/test_project/: models.py  settings.py  urls.py
tests/test_project/migrations/: 0001_initial.py
