[tool.poetry]
name = "django-kanban-board"
version = "0.0.1"
description = "Package providing models and views for displaying customizable kanban-like boards"

license = "BSD"

authors = [
    "Radosław Stępień <rstepien@protonmail.com>"
]

readme = 'README.md'

repository = "https://github.com/Zeerooth/django-kanban-board"
homepage = "https://github.com/Zeerooth/django-kanban-board"

keywords = ['django']

packages = [
    { include = "kanban_board" },
]

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.9"
django = ">=2.0,<3.1"
django-gm2m = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.4"
pylint = "^2.5.3"
mypy = "^0.782"
bandit = "^1.6.2"
dephell = "^0.8.3"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}